# PDF-Metadata-Editor

./: .gitignore  README.md  pdfMetadataEditor.py  pyproject.toml  tox.ini
.github/workflows/: tests.yml
src/pdfMetadataEditor/: __init__.py  editor.py  pdfMetadataEditor.py
tests/: conftest.py  test_editor.py  test_generic.py
