[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PDFMetadataEditor"
version = "0.1"
authors = [
  { name="Andrea Pachera" },
  { name="Gianmarco Brocchi", email="gianmarcobrocchi@gmail.com" },
]
description = "A simple GUI to edit the PDF metadata"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["PyQt6", "PyPDF2"]
# packages = ["pdfMetadataEditor"]
package-dir = {"" = "src"} ## FIXME not working with hatchling

[project.urls]
"Homepage" = "https://github.com/Manitary/PDF-Metadata-Editor"

# [project.scripts]
# cli-name = "pdfMetadataEditor.pdfMetadataEditor:MainWindow"

[project.gui-scripts]
pdf-metadata-editor = "pdfMetadataEditor:main"
